--- a/templates/kraken/index.twig
+++ b/templates/kraken/index.twig
@@ -9,9 +9,9 @@
     <h2>What is this</h2>
     <p>help help help</p>
 
-    <h2>Get out of here</h2>
-    <ul class="list--bullet">
-        <li><a href="{{ urlFor('kraken.applications') }}">Applications</a></li>
-        <li><a href="{{ urlFor('kraken.environments') }}">Environments</a></li>
+    <ul class="button-list">
+        <li><a class="btn" href="{{ urlFor('kraken.applications') }}">Kraken Applications</a></li>
+        <li><a class="btn" href="{{ urlFor('kraken.environments') }}">Kraken Environments</a></li>
     </ul>
+
 {% endblock %}
