add a stupid thing

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -55,6 +55,7 @@
 @import "patterns/scroll-thing";
 @import "patterns/split";
 @import "patterns/status";
+@import "patterns/loading-bar";
 
 // must go last!
 @import "app/js";
