--- a/templates/base.kraken.twig
+++ b/templates/base.kraken.twig
@@ -1,7 +1,8 @@
 {% extends 'base.html.twig' %}
+{% import 'partials/layout.header.twig' as nav_macros %}
 
 {% block page_header %}
-    {% embed 'partials/layout.header.twig' with {showNavigation: true} %}
+    {% embed 'partials/layout.header.twig' %}
         {% block banner %}
             <div class="hal">
                 <a href="{{ urlFor('kraken') }}" class="wrapper">
@@ -13,6 +14,27 @@
                     <div class="kraken-logo circular"></div>
                 </a>
             </div>
+        {% endblock %}
+
+        {% block navigation %}
+            <nav role="navigation">
+                <ul class="nav--main mbn">
+                    {% if currentUser %}
+
+                        <li>{{ nav_macros.navlink('HAL 9000', 'dashboard', 'spinner-3') }}</li>
+                        <li>{{ nav_macros.navlink('Kraken', 'kraken', 'notes') }}</li>
+                        <li>{{ nav_macros.navlink('Applications', 'kraken.applications', 'list') }}</li>
+                        <li>{{ nav_macros.navlink('Environments', 'kraken.environments', 'leaf') }}</li>
+
+                        <li>{{ nav_macros.navlink('Kraken Help', 'help', 'question') }}</li>
+                        <li>{{ nav_macros.navlink('Logout', 'logout', 'sign-out') }}</li>
+
+                    {% else %}
+                        <li class="signed-out">{{ nav_macros.navlink('Help', 'help', 'question') }}</li>
+                        <li class="signed-out">{{ nav_macros.navlink('Login', 'login', 'sign-in') }}</li>
+                    {% endif %}
+                </ul>
+            </nav>
         {% endblock %}
     {% endembed %}
 {% endblock %}
