--- a/templates/kraken/application/schema.twig
+++ b/templates/kraken/application/schema.twig
@@ -1,11 +1,11 @@
 {% extends 'base.kraken.twig' %}
+{% import "partials/form/macros.twig" as form_macros %}
 
-{% set page_title = "Application Configuration Schema" %}
+{% set page_title = "Configuration Schema" %}
 
 {% block content %}
 
-    <a href="{{ urlFor('kraken.application', {application: application.id}) }}" class="btn" style="position:absolute; right:20px;top:20px !important;">back</a>
-    <h1>Configuration Schema for <strong>{{ application.name }}</strong></h1>
+    <h1>Add Property Schema for <strong>{{ application.name }}</strong></h1>
 
     <h4>Application</h4>
     <p>{{ application.name }}</p>
@@ -16,13 +16,7 @@
 
 {% block add_property %}
     <div class="form-wrapper">
-        {% if errors %}
-            <ul class="error-list">
-                {% for error in errors %}
-                    <li>{{ error }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
+        {{ form_macros.formErrors(errors) }}
 
         <form action="" method="post">
             <ul class="form-fields">
@@ -55,12 +49,13 @@
                     </label>
                     <small class="additional">Select if the value should be hidden from the UI once saved. Use this for sensitive values such as passwords and API keys.</small>
                 </li>
-
-                <li>
-                    {# primary action #}
-                    <input class="btn" type="submit" value="Add Property">
-                </li>
             </ul>
+
+            <ul class="button-list">
+                <li><input class="btn btn--action" type="submit" value="Add Property"></li>
+                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('kraken.application', {application: application.id}) }}">Cancel</a></li>
+            </ul>
+
         </form>
     </div>
 {% endblock %}
