--- a/templates/kraken/partial/configuration.twig
+++ b/templates/kraken/partial/configuration.twig
@@ -5,7 +5,7 @@
     <table class="table--spacing-medium table--top-aligned" data-tablesaw-mode="stack">
         <thead>
             <tr>
-                {% if dualmode %}
+                {% if show_property_link %}
                     <th></th>
                 {% endif %}
                 <th>Property</th>
@@ -15,10 +15,15 @@
         </thead>
         <tbody>
             {% for property in properties %}
+
+                {% if property is diff %}
+                    {% set property = property.property ? property.property : property.schema %}
+                {% endif %}
+
                 <tr>
                     {% if property is property or property is configurationProperty %}
 
-                        {% if dualmode %}
+                        {% if show_property_link %}
                             <td>
                                 <a href="{{ urlFor('kraken.property', {application: application.id, property: property.id}) }}">
                                     {{ macros.icon('list') }}
@@ -33,7 +38,7 @@
                         <td>{{ kraken_macros.renderProperty(property) }}</td>
 
                     {% else %}
-                        {% if dualmode %}
+                        {% if show_property_link %}
                             <td></td>
                         {% endif %}
 
