--- a/templates/kraken/application/status.twig
+++ b/templates/kraken/application/status.twig
@@ -1,7 +1,7 @@
 {% extends 'base.kraken.twig' %}
 {% import "partials/macros.twig" as macros %}
 
-{% set page_title = "Configuration Status" %}
+{% set page_title = "Application Configuration" %}
 {% set isAdmin = true %}
 
 {% block content %}
