--- a/templates/kraken/configuration/latest/property.twig
+++ b/templates/kraken/configuration/latest/property.twig
@@ -5,9 +5,6 @@
 {% set page_title = "View Configuration Property" %}
 
 {% block content %}
-
-    <p><a class="btn btn--small btn--back" href="{{ urlFor('kraken.configuration.latest', {application: application.id, environment: environment.id}) }}">Back to Latest Configuration</a></p>
-
     <h1>Configuration Property for <strong>{{ application.name }}</strong></h1>
 
     <h4>Environment</h4>
@@ -26,13 +23,17 @@
     <h4>Key</h4>
     <p><code>{{ property.schema.key }}</code></p>
 
-    <h4>Value</h4>
+    <h4>Current Value</h4>
     {{ kraken_macros.renderProperty(property) }}
 
-    <h2 class="mbn">History</h2>
-    <h5 class="mtn">10 most recent values</h5>
+    <h2 class="mbn">Deployed History</h2>
+    <h5 class="mts">Most recent values</h5>
     {{ block('property_history') }}
 
+    <ul class="button-list">
+        <li><a class="btn" href="{{ urlFor('kraken.configuration.latest', {application: application.id, environment: environment.id}) }}">Latest Configuration</a></li>
+        <li><a class="btn btn--secondary" href="{{ urlFor('kraken.application', {application: application.id}) }}">Application Configuration</a></li>
+    </ul>
 {% endblock %}
 
 {% block property_history %}
@@ -41,7 +42,7 @@
         <table class="table--spacing-medium table--top-aligned" data-tablesaw-mode="stack">
             <thead>
                 <tr>
-                    <th></th>
+                    <th class="t20">Deployed Config</th>
                     <th class="t15">Time</th>
                     <th>Value</th>
                 </tr>
@@ -51,8 +52,7 @@
                     <tr>
                         <td>
                             <a href="{{ urlFor('kraken.configuration', {application: application.id, configuration: previous_property.configuration.id}) }}">
-                                {{ macros.icon('list') }}
-                                <span class="tablesaw-collapse">View Configuration</span>
+                                {{ macros.icon('list') }} {{ previous_property.configuration.id[:7] }}
                             </a>
                         </td>
                         <td>{{ previous_property.created|html5date }}</td>
