Add spacing to two tables

--- a/templates/partials/pending-table.twig
+++ b/templates/partials/pending-table.twig
@@ -1,6 +1,6 @@
 {% import "partials/macros.twig" as macros %}
 
-<table id="js-queue" data-tablesaw-mode="stack">
+<table id="js-queue" class="table--spacing-medium" data-tablesaw-mode="stack">
     <thead>
         <tr>
             <th>Type</th>
