--- a/templates/admin/queue.history.twig
+++ b/templates/admin/queue.history.twig
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block queuehistory %}
-    <table data-tablesaw-mode="stack">
+    <table class="table--spacing-medium" data-tablesaw-mode="stack">
         <thead>
             <tr>
                 <th>Type</th>
